--- a/fabric-admin.yaml
+++ b/fabric-admin.yaml
@@ -26,7 +26,7 @@ spec:
         - name: fabric-tools-secrets
       containers:
       - name: fabric-admin
-        image: akvhlftemplate.azurecr.io/fabric-tools:1.0.0
+        image: akvhlftemplate.azurecr.io/fabric-tools:preview_shr
         stdin: true
         tty: true
         command: ["/bin/bash"]
