--- a/fabric-admin.yaml
+++ b/fabric-admin.yaml
@@ -22,11 +22,17 @@ spec:
       - name: signcerts
         secret:
            secretName: hlf-admin-idcert
+      - name: tls-key
+        secret:
+           secretName: hlf-admin-tls-idkey
+      - name: tls-cert
+        secret:
+           secretName: hlf-admin-tls-idcert
       imagePullSecrets:
         - name: fabric-tools-secrets
       containers:
       - name: fabric-admin
-        image: akvhlftemplate.azurecr.io/fabric-tools:preview
+        image: akvhlftemplate.azurecr.io/fabric-tools:shr_tls
         stdin: true
         tty: true
         command: ["/bin/bash"]
@@ -45,6 +51,12 @@ spec:
           readOnly: true
         - mountPath: /var/hyperledger/peer/msp/signcerts
           name: signcerts
+          readOnly: true
+        - mountPath: /var/hyperledger/peer/tls
+          name: tls-key
+          readOnly: true
+        - mountPath: /var/hyperledger/peer/tls
+          name: tls-cert
           readOnly: true
         env:
         - name: HLF_ORG_NAME
@@ -69,6 +81,14 @@ spec:
         - name: CORE_PEER_TLS_ENABLED
           value: "true"
         - name: CORE_PEER_TLS_ROOTCERT_FILE
+          value: /var/hyperledger/peer/msp/tlscacerts/ca.crt
+        - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
+          value: "true"
+        - name: CORE_PEER_TLS_CLIENTCERT_FILE
+          value: /var/hyperledger/peer/msp/tls/cert.pem
+        - name: CORE_PEER_TLS_CLIENTKEY_FILE
+          value: /var/hyperledger/peer/msp/tls/key.pem
+        - name: CORE_PEER_TLS_CLIENTROOTCAS_FILES
           value: /var/hyperledger/peer/msp/tlscacerts/ca.crt
         - name: CORE_PEER_MSPCONFIGPATH
           value: /var/hyperledger/peer/msp
