--- a/fabric-admin.yaml
+++ b/fabric-admin.yaml
@@ -4,7 +4,6 @@ metadata:
   name: fabric-admin
   labels:
      name: fabric-admin
-  namespace: hlf-admin
 spec:
       restartPolicy: Never
       volumes:
@@ -27,7 +26,7 @@ spec:
         - name: fabric-tools-secrets
       containers:
       - name: fabric-admin
-        image: akvhlftemplate.azurecr.io/fabric-tools:tg_NS15
+        image: akvhlftemplate.azurecr.io/fabric-tools:tg_namespace6
         stdin: true
         tty: true
         command: ["/bin/bash"]
