--- a/fabric-admin.yaml
+++ b/fabric-admin.yaml
@@ -22,6 +22,12 @@ spec:
       - name: signcerts
         secret:
            secretName: hlf-admin-idcert
+      - name: tls-key
+        secret:
+           secretName: hlf-admin-tls-idkey
+      - name: tls-cert
+        secret:
+           secretName: hlf-admin-tls-idcert
       imagePullSecrets:
         - name: fabric-tools-secrets
       containers:
@@ -46,6 +52,14 @@ spec:
         - mountPath: /var/hyperledger/peer/msp/signcerts
           name: signcerts
           readOnly: true
+        - mountPath: /var/hyperledger/peer/tls/key.pem
+          name: tls-key
+          readOnly: true
+          subPath: key.pem
+        - mountPath: /var/hyperledger/peer/tls/cert.pem
+          name: tls-cert
+          readOnly: true
+          subPath: cert.pem
         env:
         - name: HLF_ORG_NAME
           valueFrom:
