Revert "Merge branch 'shr-namespace' into v1.0.0"
This reverts commit 6a6d3c110f9c7f6f19f3ff491f9bfbf3a02143a9, reversing
changes made to ee8e1cdb838a8b5bee86a6ce7bed9758be7dc508.

--- a/fabric-admin.yaml
+++ b/fabric-admin.yaml
@@ -32,7 +32,7 @@ spec:
         - name: fabric-tools-secrets
       containers:
       - name: fabric-admin
-        image: akvhlftemplate.azurecr.io/fabric-tools:tg_namespace6
+        image: akvhlftemplate.azurecr.io/fabric-tools:1.0.0
         stdin: true
         tty: true
         command: ["/bin/bash"]
